--- a/build.gradle
+++ b/build.gradle
@@ -18,5 +18,12 @@ golang {
         build 'github.com/cavaliercoder/grab'
         build 'github.com/mholt/archiver'
     }
+    build {
+        outputFilenamePattern = 'build/out/<project name>-%{platform}%-' + version + '{extension}'
+        excludes = ['.git/**', 'build.gradle', 'build/**', '.gradle/**', 'gradle/**', 'data/**', '.gitignore', '.gradlew', '.gradlew.bat', 'README.md']
+    }
+    toolchain {
+        goversion = 'go1.8.1'
+    }
     platforms = System.getProperty("platforms", "linux-amd64,linux-386,windows-amd64,windows-386,darwin-amd64")
 }
