--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ golang {
         build 'github.com/mholt/archiver'
     }
     build {
-        outputFilenamePattern = '${project.buildDir}/out/${project.name}-${versione}'%{extension}'
+        outputFilenamePattern = '${project.buildDir}/out/${project.name}-${versione}%{extension}'
         excludes = ['.git/**', 'build.gradle', 'build/**', '.gradle/**', 'gradle/**', 'data/**', '.gitignore', '.gradlew', '.gradlew.bat', 'README.md']
     }
     toolchain {
