--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ golang {
         build 'github.com/mholt/archiver'
     }
     build {
-        outputFilenamePattern = project.getBuildDir().getPath() + '/out/FactorioWrapper-%{platform}-' + version + '%{extension}'
+        outputFilenamePattern = project.getBuildDir().getPath() + '/out/FactorioWrapper-' + version + '-%{platform}%{extension}'
         excludes = ['.git/**', 'build.gradle', 'build/**', '.gradle/**', 'gradle/**', 'data/**', '.gitignore', '.gradlew', '.gradlew.bat', 'README.md']
     }
     toolchain {
